# DiplomNetologyGjango

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint-celery-beat.sh  entrypoint-celery-worker.sh  entrypoint.sh  locustfile.py  manage.py  pyproject.toml
DiplomNetologyGjango/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/: admin.py  apps.py  commands.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/jwt_tokens/: logger.py
backend/loggers/: backend_logger.py  celery_beat_logger.py  celery_logger.py  celery_worker_logger.py  mail_send_logger.py
backend/urls/: admin_urls.py  api_urls.py  basket_urls.py  order_urls.py  partner_urls.py  shop_urls.py  user_urls.py
backend/utils/: admin_audit.py  exception_handler.py  generators.py  normalizers.py  permissions.py  throttling.py
backend/views/: admin_views.py  basket_views.py  order_views.py  partners_views.py  shop_views.py  user_views.py
templates/admin/: upload_yaml.html
templates/admin/auth/user/: change_password.html
templates/admin/backend/shop/: dashboard.html
templates/admin/backend/user/: change_form.html
templates/registration/: login.html
